@@ -87,6 +87,13 @@
 
   <browser:page
       for="*"
+      name="get_list_of_search_parametes"
+      class=".zimbrajson.GetListOfSearchParameters"
+      permission="zope2.View"
+      />
+
+  <browser:page
+      for="*"
       name="zimbra_get_tree_json"
       class=".zimbrajson.GetTreeJson"
       permission="zope2.View"
